--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,10 +7,16 @@
 </head>
 <body>
 <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold text-body-emphasis">GitHub social login implementation</h1>
+    <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+    <h1 class="display-5 fw-bold text-body-emphasis">Pau Sansa Verdú</h1>
     <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">This is my repo for the JOBarcelona 2023 Hackathon</p>
+        <p class="lead mb-4">GitHub social login implementation</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="https://github.com/PauSansa" class="btn btn-primary btn-lg px-4 gap-3">Go to my Github</a>>
+            <a href="/getall" class="btn btn-outline-secondary btn-lg px-4">VIEW ALL USERS</a>
+        </div>
     </div>
+</div>
 </div>
 </body>
 </html>
