--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 <div class="px-4 py-5 my-5 text-center">
-    <img class="d-block mx-auto mb-4" src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-    <h1 class="display-5 fw-bold text-body-emphasis">Pau Sansa Verdú</h1>
+    <img class="d-block mx-auto mb-4" src="https://web.ub.edu/documents/2710030/4583516/jobarcelona.jpg_es.jpg/3711ec8d-c766-b1c9-5000-66160a3ab4eb?t=1677489825665" alt="" width="150" height="150">
+    <h1 class="display-5 fw-bold text-body-emphasis">Pau Sansa Verdu</h1>
+    <h4>Bienvenido</h4>
+    <h3 th:text="${name}"></h3>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">GitHub social login implementation</p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="https://github.com/PauSansa" class="btn btn-primary btn-lg px-4 gap-3">Go to my Github</a>>
-            <a href="/getall" class="btn btn-outline-secondary btn-lg px-4">VIEW ALL USERS</a>
+            <a href="/getall" class="btn btn-primary btn-lg px-4">VIEW ALL USERS</a>
+            <a href="https://github.com/PauSansa" class="btn btn-ouline-secondary btn-lg px-4 gap-3">Go to my Github</a>
         </div>
     </div>
 </div>
