--- a/src/main/resources/templates/allusers.html
+++ b/src/main/resources/templates/allusers.html
@@ -8,11 +8,12 @@
 <body>
 <div class="container mt-4">
   <br> <br>
-  <h1 class="display-5 fw-bold text-body-emphasis">User Registry</h1>
+  <h1 class="display-5 fw-bold text-body-emphasis">User Archive</h1>
   <table class="table">
     <thead>
     <tr>
       <th>ID</th>
+      <th>Login Name</th>
       <th>Avatar</th>
       <th>Email/Profile Link</th>
     </tr>
@@ -20,7 +21,8 @@
     <tbody>
     <tr th:each="user:${users}">
       <td th:text="${user.id}"></td>
-      <td><img th:src="${user.avatarUrl}" height="50px" width="50px"></img></td>
+      <td th:text="${user.loginName}"></td>
+      <td><img th:src="${user.avatarUrl}" height="50px" width="50px"/></td>
       <td th:text="${user.email}"></td>
 
 
