--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,12 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-<h2>Login</h2>
-<div th:if="${errorMessage}" class="error-message">
-    <p th:text="${errorMessage}"></p>
-</div>
-<div class="login-buttons">
-    <a th:href="@{/oauth2/authorization/github}" class="btn btn-primary">Login with GitHub</a>
+<div class="px-4 py-5 my-5 text-center">
+    <h2>Login</h2>
+    <div th:if="${errorMessage}" class="error-message">
+        <p th:text="${errorMessage}"></p>
+    </div>
+    <div class="login-buttons">
+        <a th:href="@{/oauth2/authorization/github}" class="btn btn-primary">Login with GitHub</a>
+    </div>
 </div>
 </body>
 </html>
